2010-03-04  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/configure.in:    Don't use -fvisibility=hidden
	* unix/tcl.m4:          for cygwin.
	* win/tkWinTest.c       Make tkTestWinProcs const

2010-03-04  Donal K. Fellows  <dkf@users.sf.net>

	* doc/clipboard.n: Added note about STRING vs. UTF8_STRING types.

2010-03-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4: [Tcl FRQ 2959069]: Support for -fvisibility=hidden
	* unix/configure:  (regenerated with autoconf-2.59)

2010-02-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/configure.in:    Use @EXEEXT@ in stead of @EXT_SUFFIX@
	* unix/tcl.m4:
	* unix/Makefile.in:     Use -DBUILD_tk
	* unix/configure:       (regenerated)
	* generic/tkConfig.c:   Make internal Tk_ObjCustomOption const
	* generic/tkPanedWindow.c:
	* generic/tkTest.c:
	* generic/tkText.c:

2010-02-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkText.c (TextEditCmd): [Bug 1799782]: Refix this, so that
	<<Modified>> events are issued when things change.

2010-02-20  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c: Cache the result of the last call to
	EndPosition() to avoid quadratic-time behavior in the common cases
	where the treeview is populated in depth-first or breadth-first
	order.

2010-02-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinColor.c:	 remove unused "dataKey" variable

2010-02-19  Donal K. Fellows  <dkf@users.sf.net>

	* unix/configure.in, unix/Makefile.in: [Bug 2415437]: Corrections to
	allow installation of Tcl and Tk to different directories, especially
	when neither is a system standard location. Also [Tcl Bug 2307398].

	* unix/installManPage: [Tcl Bug 2954638]: Correct behaviour of manual
	page installer. Also added armouring to check that assumptions about
	the initial state are actually valid (e.g., look for existing input
	file).

2010-02-19  Stuart Cassoff  <stwo@users.sourceforge.net>

	* tcl.m4: Correct compiler/linker flags for threaded builds on
	OpenBSD.